Prevent line breaks in stats in Chinese
Although we want a stat label like "Trackers Removed" to span two
lines, we don't want every character in Chinese to be moved to a
new line. Although the former was achieved by setting a flex-basis
of 0, that caused line breaks between every character in Chinese.
By simply setting the flex-basis to a small (i.e. smaller than the
width of the word "Trackers") but non-zero (i.e. larger than the
width of 追) value, we achieve both goals.

--- a/frontend/src/components/dashboard/aliases/Alias.module.scss
+++ b/frontend/src/components/dashboard/aliases/Alias.module.scss
@@ -204,7 +204,8 @@ $trackerRemovalIndicatorWidth: 20px;
 }
 
 .alias-stats {
-  flex-basis: 0;
+  flex: 1 0 $content-xs;
+  text-align: center;
 
   .main-data & {
     display: none;
@@ -302,6 +303,7 @@ $trackerRemovalIndicatorWidth: 20px;
         height: 25px;
         display: flex;
         align-items: center;
+        word-break: keep-all;
       }
 
       // De-emphasise stats for:
